Detalle de Vehiculos Finalizado y correciones generales